2012-01-27  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-17
        * Fixes for more than eight EM thresholds.

2011-12-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-16
        * Tier0 merging fixes.

2011-11-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-15
        * Fix ROOT runtime warnings from Sumw2.

2011-11-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-14
        * Updates to EmEfficiencies from Hardeep.

2011-11-02  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-13
        * Correct jobOptions.

2011-10-27 Rohin Narayan <narayan@physi.uni-heidelberg.de>
		* Tag as TrigT1CaloMonitoring-00-10-12
		* New job option variables and changes to job options

2011-10-10  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-11
        * Leave out noDeadBad plots.

2011-09-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-10
        * Use correct threshold names in hist titles.

2011-09-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-09
        * Coverity fix.

2011-09-06  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-08
        * Fix message level inconsistency.

2011-08-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-07
        * Fixes for DataModel-00-23-21 from SS.

2011-08-17  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-06
        * Move monitoring back to RAWtoESD step to avoid
        * reading large database folder twice on Tier0.

2011-08-16  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-10-05
        * JobOption fix for savannah bug 85567.

2011-08-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>